--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,16 +8,16 @@
 
   <div class="main body">
     <!--Form Created Like This-->
-    <app-form [labels]="meta"
-              [labelsValue]="data"
+    <app-form [fields]="meta"
+              [values]="data"
               [fieldDataPool]="dependencies"
               [order]="order"
               [method]="method"
-              [submit]="getForm"
-              (isValid)="canGet = $event"
-              (formEmitter)="showForm($event)" *ngIf="meta"></app-form>
+              [returnForm]="getForm"
+              (getValidity)="canGet = $event"
+              (getFormData)="showForm($event)" *ngIf="meta"></app-form>
 
-    <button mat-button (click)="getFormData()" [disabled]="!canGet">Submit</button>
+    <button mat-button color="primary" (click)="getFormData()" [disabled]="!canGet">Submit</button>
   </div>
 
 </div>
