--- a/src/lib/ngx-dynamic-form/field-types/date-input-area/date-input-area.component.css
+++ b/src/lib/ngx-dynamic-form/field-types/date-input-area/date-input-area.component.css
@@ -7,3 +7,7 @@
   flex-direction: row;
   align-items: center;
 }
+
+/deep/ .mat-form-field-appearance-outline .mat-form-field-suffix {
+  display: flex!important;
+}
