dynamic-form-unizkm-hg@1.1.9

--- a/src/lib/ngx-dynamic-form/field-types/combo-box/combo-box.component.html
+++ b/src/lib/ngx-dynamic-form/field-types/combo-box/combo-box.component.html
@@ -9,7 +9,7 @@
            (keyup)="keyup($event)" (change)="change()" (focus)="focus()">
 
     <mat-autocomplete #af="matAutocomplete">
-      <mat-option *ngFor="let opt of field?.fieldDataPool ? field?.fieldDataPool?.list : fieldDataPool"
+      <mat-option *ngFor="let opt of field.fieldDataPool ? field.fieldDataPool.list : fieldDataPool"
                   [value]="opt?.id" (click)="select = opt?.someLabel">{{opt?.someLabel}}</mat-option>
     </mat-autocomplete>
   </mat-form-field>
