--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,45 @@
-<div>
+<br><br>
 
-  <div class="main header">
-    <div style="font-family: 'Roboto Medium';color: white">Dynamic Form</div>
-    <span style="flex: 1 1 auto"></span>
-    <div *ngIf="method" style="font-family: 'Roboto Light';color:white">{{method}}</div>
-  </div>
+<div style="display: block;margin-left: auto;margin-right: auto;width: 60%">
 
-  <div class="main body">
-    <!--Form Created Like This-->
-    <app-form [fields]="meta"
-              [values]="data"
-              [fieldDataPool]="dependencies"
-              [order]="order"
-              [method]="method"
-              [returnForm]="getForm"
-              (getValidity)="canGet = $event"
-              (getFormData)="showForm($event)" *ngIf="meta"></app-form>
+  <!--<div class="row">-->
+    <!--<app-filter class="col"-->
+                <!--[filterMap]="filter"-->
+                <!--[fieldDataPool]="dependencies"-->
+                <!--[order]="requestFilter"-->
+                <!--(returnFilters)="showFilter($event)"-->
+                <!--*ngIf="filter"></app-filter>-->
+  <!--</div>-->
 
-    <button mat-button color="primary" (click)="getFormData()" [disabled]="!canGet">Submit</button>
+  <br><br>
+
+  <div class="row">
+    <div class="main header">
+      <div style="font-family: 'Roboto Medium';color: white">Dynamic Form</div>
+      <span style="flex: 1 1 auto"></span>
+      <div *ngIf="method" style="font-family: 'Roboto Light';color:white">{{method}}</div>
+    </div>
+
+    <div class="main body">
+      <!--Form-->
+      <app-form [fields]="meta"
+                [values]="data"
+                [fieldDataPool]="dependencies"
+                [order]="order"
+                [method]="method"
+                (getValidity)="canGet = $event"
+                *ngIf="meta"></app-form>
+      <!--Buttons-->
+      <div style="display: flex;flex-direction: row">
+        <button appGetForm (form)="showForm($event)"
+                mat-button
+                color="primary"
+                [disabled]="!canGet">Submit</button>
+        <button appResetForm
+                mat-button
+                color="warn">Reset</button>
+      </div>
+    </div>
   </div>
 
 </div>
