DOCUMENTATION in app/main, app/request and app/requests components

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -41,9 +41,11 @@
     <router-outlet></router-outlet>
   </div>
 
+  <!--SIDEBAR HTML USAGE-->
   <mat-drawer #drawer mode="over" position="end" style="width: 650px;background-color: white">
     <ng-template appInjectComponent></ng-template>
   </mat-drawer>
+  <!--------------------->
 
 </mat-drawer-container>
 
