INPUT_TABLE case

--- a/src/app/requests/requests.component.html
+++ b/src/app/requests/requests.component.html
@@ -13,10 +13,7 @@
       </button>
     </div>
     <div class="col right-btn" style="text-align: right">
-      <button mat-button color="primary" style="margin-left: 10px"
-              [matMenuTriggerFor]="requestsType">
-        Add
-      </button>
+      <button mat-button color="primary" [matMenuTriggerFor]="requestsType">Add</button>
     </div>
   </div>
 </div>
