--- a/src/lib/exportable/dynamic-form/field-types/date-input/date-input.component.css
+++ b/src/lib/exportable/dynamic-form/field-types/date-input/date-input.component.css
@@ -1,3 +1,3 @@
-/deep/ .mat-form-field-appearance-outline .mat-form-field-suffix {
+::ng-deep .mat-form-field-appearance-outline .mat-form-field-suffix {
   display: flex!important;
 }
