--- a/src/lib/exportable/dynamic-form/form/form.component.html
+++ b/src/lib/exportable/dynamic-form/form/form.component.html
@@ -1,10 +1,6 @@
 <!--Form Group-->
-<form class="row"
-      [formGroup]="form"
-      *ngIf="form">
-  <div *ngFor="let field of fieldArray"
-       [class]="order ? order[field?.fieldName]?.class : 'col-12'">
-
+<form class="row" [formGroup]="form" *ngIf="form">
+  <div *ngFor="let field of fieldArray" [class]="order ? field?.class ? field?.class : 'col-12' : 'col-12'">
     <app-field [appearance]="appearance"
                [fg]="form" [field]="field"
                [fieldDataPool]="fieldDataPool"></app-field>
@@ -12,10 +8,8 @@
 </form>
 
 <!--Skeleton-->
-<div class="row"
-     *ngIf="!form && !hideSkeleton">
-  <div *ngFor="let skeleton of setSkeleton"
-       [class]="skeleton?.class ? skeleton?.class : 'col-12'">
+<div class="row" *ngIf="!form && !hideSkeleton">
+  <div *ngFor="let skeleton of setSkeleton" [class]="skeleton?.class ? skeleton?.class : 'col-12'">
     <ngx-skeleton-loader [count]="1"
                          [theme]="appearance ? {height: '60px'} : {height: '45px'}"
                          *ngIf="skeleton.display === undefined || skeleton.display"></ngx-skeleton-loader>
