--- a/src/lib/exportable/paginator/paginator/paginator.component.html
+++ b/src/lib/exportable/paginator/paginator/paginator.component.html
@@ -1,7 +1,7 @@
 <div class="row paginator-container">
   <!--BUTTONS LEFT SIDE-->
   <div class="col">
-    <div class="row">
+    <div class="row" *ngIf="buttons">
       <div class="col"
            *ngFor="let button of buttons;let i = index"
            style="max-width: fit-content">
@@ -52,6 +52,7 @@
     <button mat-icon-button
             [color]="color"
             [matTooltip]="languageMap[language]?.firstPage"
+            [disabled]="previousBtnDisabled"
             (click)="firstPage()">
       <mat-icon>first_page</mat-icon>
     </button>
@@ -59,17 +60,21 @@
     <button mat-icon-button
             [color]="color"
             [matTooltip]="languageMap[language]?.prevPage"
+            [disabled]="previousBtnDisabled"
             (click)="paginator(-1)">
       <mat-icon>chevron_left</mat-icon>
     </button>
     <!--PAGES-->
     <mat-button-toggle-group appearance="legacy" #pages="matButtonToggleGroup">
-      <mat-button-toggle *ngFor="let page of pagesPaginator" [value]="page" [checked]="params?.pageNo === page">{{page}}</mat-button-toggle>
+      <mat-button-toggle *ngFor="let page of pagesPaginator"
+                         [checked]="params?.pageNo === page"
+                         [value]="page" >{{page}}</mat-button-toggle>
     </mat-button-toggle-group>
     <!--NEXT PAGE-->
     <button mat-icon-button
             [color]="color"
             [matTooltip]="languageMap[language]?.nextPage"
+            [disabled]="nextBtnDisabled"
             (click)="paginator(1)">
       <mat-icon>chevron_right</mat-icon>
     </button>
@@ -77,6 +82,7 @@
     <button mat-icon-button
             [color]="color"
             [matTooltip]="languageMap[language]?.lastPage"
+            [disabled]="nextBtnDisabled"
             (click)="lastPage()">
       <mat-icon>last_page</mat-icon>
     </button>
