--- a/src/lib/exportable/dynamic-form/field-types/combo-box-multi/combo-box-multi.component.html
+++ b/src/lib/exportable/dynamic-form/field-types/combo-box-multi/combo-box-multi.component.html
@@ -1,25 +1,29 @@
 <div [formGroup]="fg" *ngIf="fg && field && field?.multi" class="col-12">
   <mat-form-field *ngIf="display" [appearance]="appearance" style="width: 100%">
     <mat-label *ngIf="appearance">{{field?.fieldLabel}}</mat-label>
-    <mat-chip-list #multi>
-      <mat-chip *ngFor="let chip of selected;let i = index"
-                [selectable]="true"
-                [removable]="true" (removed)="removeSelection(i)">
+    <mat-chip-list #multi [formControlName]="field?.fieldName">
+      <mat-chip *ngFor="let chip of selected;let i = index" [removable]="true" (removed)="removeSelection(i)">
         {{chip?.someLabel}}
         <mat-icon matChipRemove>cancel</mat-icon>
       </mat-chip>
 
       <input matInput
+             [placeholder]="appearance ? '' : field?.fieldLabel"
+             formControlName="inputField"
              [matAutocomplete]="af"
              [matChipInputFor]="multi"
-             [formControlName]="field?.fieldName"
-             [placeholder]="appearance ? '' : field?.fieldLabel"
+             [matChipInputAddOnBlur]="false"
              (keyup)="keyup($event)" (change)="change()" (focus)="focus()">
     </mat-chip-list>
 
-    <mat-autocomplete #af="matAutocomplete">
-      <mat-option *ngFor="let opt of field?.fieldDataPool ? field?.fieldDataPool?.list : fieldDataPool"
-                  [value]="opt?.id" (click)="addSelection(opt)">{{field?.selectLabel ? opt[field?.selectLabel] : opt?.someLabel}}</mat-option>
+    <mat-icon matSuffix>clear_all</mat-icon>
+
+    <mat-error>{{errorMessages}}</mat-error>
+
+    <mat-autocomplete #af="matAutocomplete" (optionSelected)="addSelection($event)">
+      <mat-option *ngFor="let opt of options ? (options | async) : field?.fieldDataPool ? field?.fieldDataPool?.list : fieldDataPool" [value]="opt">
+        {{opt | option: selectLabel}}
+      </mat-option>
     </mat-autocomplete>
   </mat-form-field>
 </div>
