--- a/src/lib/exportable/dynamic-form/field-types/date-input/date-input.component.css
+++ b/src/lib/exportable/dynamic-form/field-types/date-input/date-input.component.css
@@ -1,3 +1,7 @@
 ::ng-deep .mat-form-field-appearance-outline .mat-form-field-suffix {
   display: flex!important;
 }
+
+mat-form-field {
+  width: 100%;
+}
