--- a/src/lib/exportable/dynamic-form/field-types/decimal-input/decimal-input.component.html
+++ b/src/lib/exportable/dynamic-form/field-types/decimal-input/decimal-input.component.html
@@ -1,5 +1,5 @@
 <div [formGroup]="fg" *ngIf="fg && field" class="col-12">
-  <mat-form-field *ngIf="notId && display" [appearance]="appearance" style="width: 100%">
+  <mat-form-field [appearance]="appearance" *ngIf="display">
     <mat-label *ngIf="appearance">{{field?.fieldLabel}}</mat-label>
 
     <input matInput
