--- a/src/lib/exportable/dynamic-filter/filter-type/date/date.component.html
+++ b/src/lib/exportable/dynamic-filter/filter-type/date/date.component.html
@@ -1,14 +1,25 @@
 <div class="col" [formGroup]="fg" *ngIf="fg && filter">
   <mat-form-field class="col">
-    <input matInput
+    <input #input
+           matInput
            [formControlName]="filter?.fieldName"
            [placeholder]="filter?.fieldLabel"
-           [value]="fg.get(filter.fieldName).value | date: 'MMM dd yyyy'">
-    <input type="hidden"
-           [matDatepicker]="dp"
-           (dateChange)="addDate($event)">
+           [value]="fg.get(filter.fieldName).value | date: 'MMM dd yyyy, HH:mm'"
+           (click)="openDP(dp)">
 
-    <mat-datepicker-toggle matSuffix [for]="dp"></mat-datepicker-toggle>
-    <mat-datepicker touchUi #dp></mat-datepicker>
+    <mat-datepicker-toggle matSuffix
+                           matTooltip="Add Date"
+                           [for]="dp"
+                           [disabled]="input?.disabled"></mat-datepicker-toggle>
+    <button mat-icon-button
+            matSuffix
+            matTooltip="Add Time"
+            (click)="addTime()"
+            [disabled]="input?.disabled">
+      <mat-icon>watch_later</mat-icon>
+    </button>
   </mat-form-field>
+
+  <input type="hidden" [matDatepicker]="dp" (dateChange)="addDate($event)">
+  <mat-datepicker touchUi #dp></mat-datepicker>
 </div>
