--- a/src/lib/exportable/dynamic-filter/filter-type/decimal/decimal.component.html
+++ b/src/lib/exportable/dynamic-filter/filter-type/decimal/decimal.component.html
@@ -1,8 +1,7 @@
 <div class="col" [formGroup]="fg" *ngIf="fg && filter">
-  <mat-form-field class="col">
+  <mat-form-field style="width: 100%">
     <input matInput
            [formControlName]="filter?.fieldName"
-           [placeholder]="filter?.fieldLabel"
-           (keyup)="addKeyUpFilter($event?.srcElement?.value)">
+           [placeholder]="filter?.fieldLabel">
   </mat-form-field>
 </div>
