--- a/src/lib/exportable/dynamic-form/field-types/combo-box-multi/combo-box-multi.component.html
+++ b/src/lib/exportable/dynamic-form/field-types/combo-box-multi/combo-box-multi.component.html
@@ -1,5 +1,5 @@
-<div [formGroup]="fg" *ngIf="fg && field && field?.multi" class="col-12">
-  <mat-form-field *ngIf="display" [appearance]="appearance" style="width: 100%">
+<div [formGroup]="fg" *ngIf="fg && field && field?.multi" class="dynamic-field-wrapper">
+  <mat-form-field *ngIf="display" [appearance]="appearance">
     <mat-label *ngIf="appearance">{{field?.fieldLabel}}</mat-label>
     <mat-chip-list #multi [formControlName]="field?.fieldName">
       <mat-chip *ngFor="let chip of selected;let i = index" [removable]="true" (removed)="removeSelection(i)">
