--- a/src/lib/exportable/dynamic-form/field-types/combo-box/combo-box.component.html
+++ b/src/lib/exportable/dynamic-form/field-types/combo-box/combo-box.component.html
@@ -1,5 +1,5 @@
-<div [formGroup]="fg" *ngIf="fg && field" class="col-12">
-  <mat-form-field *ngIf="display" [appearance]="appearance" style="width: 100%">
+<div [formGroup]="fg" *ngIf="fg && field" class="dynamic-field-wrapper">
+  <mat-form-field *ngIf="display" [appearance]="appearance">
     <mat-label *ngIf="appearance">{{field?.fieldLabel}}</mat-label>
     <input matInput
            [value]="selected"
