--- a/src/lib/exportable/dynamic-form/field-types/date-input-area/date-input-area.component.css
+++ b/src/lib/exportable/dynamic-form/field-types/date-input-area/date-input-area.component.css
@@ -1,7 +1,11 @@
-.expand-full{
+::ng-deep .mat-form-field-appearance-outline .mat-form-field-suffix {
+  display: flex!important;
+}
+
+mat-form-field {
   width: 100%;
 }
 
-::ng-deep .mat-form-field-appearance-outline .mat-form-field-suffix {
-  display: flex!important;
+.dynamic-field-wrapper {
+  width: 100%;
 }
