--- a/src/lib/exportable/dynamic-form/field-types/form-array/form-array.component.css
+++ b/src/lib/exportable/dynamic-form/field-types/form-array/form-array.component.css
@@ -1,4 +1,4 @@
-.form-array {
+.dynamic-form-array-wrapper {
   box-shadow: 0 3px 20px -12px rgba(0, 0, 0, 0.5);
   border-radius: 4px;
   padding: 15px;
@@ -9,7 +9,7 @@
   background-color: rgba(244, 67, 54, 0.02);
 }
 
-.form-array-btn {
+.dynamic-form-array-btn {
   display: flex;
   flex-direction: row;
   align-items: center;
