--- a/src/lib/exportable/dynamic-form/field-types/text-input/text-input.component.html
+++ b/src/lib/exportable/dynamic-form/field-types/text-input/text-input.component.html
@@ -1,4 +1,4 @@
-<div [formGroup]="fg" *ngIf="fg && field" class="col-12">
+<div [formGroup]="fg" *ngIf="fg && field" class="dynamic-field-wrapper">
   <mat-form-field [appearance]="appearance" *ngIf="display">
     <mat-label *ngIf="appearance">{{field?.fieldLabel}}</mat-label>
 
