--- a/src/lib/exportable/dynamic-form/field/field.component.html
+++ b/src/lib/exportable/dynamic-form/field/field.component.html
@@ -3,7 +3,7 @@
   <div [ngSwitch]="field?.inputType">
 
     <div *ngSwitchCase="'TEXT_INPUT'">
-      <app-text-input class="row"
+      <app-text-input class="expand"
                       [fg]="fg"
                       [field]="field"
                       [display]="display"
@@ -11,7 +11,7 @@
     </div>
 
     <div *ngSwitchCase="'INTEGER_INPUT'">
-      <app-decimal-input class="row"
+      <app-decimal-input class="expand"
                          [fg]="fg"
                          [field]="field"
                          [display]="display"
@@ -19,7 +19,7 @@
     </div>
 
     <div *ngSwitchCase="'DECIMAL_INPUT'">
-      <app-decimal-input class="row"
+      <app-decimal-input class="expand"
                          [fg]="fg"
                          [field]="field"
                          [display]="display"
@@ -27,7 +27,7 @@
     </div>
 
     <div *ngSwitchCase="'DATE_INPUT'">
-      <app-date-input class="row"
+      <app-date-input class="expand"
                       [fg]="fg"
                       [field]="field"
                       [display]="display"
@@ -35,22 +35,29 @@
     </div>
 
     <div *ngSwitchCase="'TEXT_INPUT_AREA'">
-      <app-date-input-area class="row"
+      <app-date-input-area class="expand"
                            [fg]="fg"
                            [field]="field"
                            [display]="display"
                            [appearance]="appearance"></app-date-input-area>
     </div>
 
+    <div *ngSwitchCase="'CHECK_BOX'">
+      <app-check-box class="expand"
+                      [fg]="fg"
+                      [field]="field"
+                      [display]="display"></app-check-box>
+    </div>
+
     <div *ngSwitchCase="'COMBO_BOX'">
-      <app-combo-box class="row"
+      <app-combo-box class="expand"
                      [fg]="fg"
                      [field]="field"
                      [fieldDataPool]="fieldDataPool"
                      [display]="display"
                      [appearance]="appearance"
                      *ngIf="!field?.multi"></app-combo-box>
-      <app-combo-box-multi class="row"
+      <app-combo-box-multi class="expand"
                            [fg]="fg"
                            [field]="field"
                            [fieldDataPool]="fieldDataPool"
@@ -60,7 +67,7 @@
     </div>
 
     <div *ngSwitchCase="'COMBO_BOX_AREA'">
-      <app-combo-box-multi class="row"
+      <app-combo-box-multi class="expand"
                            [fg]="fg"
                            [field]="field"
                            [fieldDataPool]="fieldDataPool"
