filter chip review

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -31,7 +31,8 @@
 
         </div>
         <div class="col header-right">
-          <button mat-button routerLink="requests">Requests</button>
+          <button mat-button routerLink="student-badges" routerLinkActive="active">Badges</button>
+          <button mat-button routerLink="requests" routerLinkActive="active">Requests</button>
         </div>
 
         <br><br>
