--- a/src/lib/exportable/dynamic-form/field-types/date-input/date-input.component.html
+++ b/src/lib/exportable/dynamic-form/field-types/date-input/date-input.component.html
@@ -7,7 +7,7 @@
            readonly
            [formControlName]="field?.fieldName"
            [placeholder]="appearance ? '' : field?.fieldLabel"
-           [value]="fg.get(field.fieldName).value | date: 'MMM dd yyyy, HH:mm'"
+           [value]="fg.get(field.fieldName).value | date: field?.dateFormat ? field?.dateFormat : 'MMM dd yyyy, HH:mm'"
            (click)="openDP(dp)">
 
     <mat-error>{{errorMessages}}</mat-error>
