--- a/src/lib/exportable/dynamic-form/form/form.component.html
+++ b/src/lib/exportable/dynamic-form/form/form.component.html
@@ -1,17 +1,17 @@
 <!--Form Group-->
 <form class="row" [formGroup]="form" *ngIf="form">
-  <div *ngFor="let field of fieldArray" [class]="order ? (field?.class ? field?.class : 'col-12') : 'col-12'">
+  <div *ngFor="let field of fieldArray" [class]="field?.class ? field?.class : 'col-12'">
     <app-field [appearance]="appearance"
-               [fg]="form" [field]="field"
+               [fg]="form"
+               [field]="field"
                [fieldDataPool]="fieldDataPool"></app-field>
   </div>
 </form>
 
 <!--Skeleton-->
 <div class="row" *ngIf="!form && !hideSkeleton">
-  <div *ngFor="let skeleton of setSkeleton" [class]="skeleton?.class ? skeleton?.class : 'col-12'">
+  <div *ngFor="let skeleton of setSkeleton" [class]="skeleton">
     <ngx-skeleton-loader [count]="1"
-                         [theme]="appearance ? {height: '60px'} : {height: '45px'}"
-                         *ngIf="skeleton.display === undefined || skeleton.display"></ngx-skeleton-loader>
+                         [theme]="appearance ? {height: '60px'} : {height: '45px'}"></ngx-skeleton-loader>
   </div>
 </div>
