refactoring combo box area

--- a/src/lib/exportable/dynamic-form/field-types/combo-box-multi/combo-box-multi.component.css
+++ b/src/lib/exportable/dynamic-form/field-types/combo-box-multi/combo-box-multi.component.css
@@ -5,3 +5,8 @@ mat-form-field {
 .dynamic-field-wrapper {
   width: 100%;
 }
+
+mat-chip{
+  border: 1px solid rgba(0, 0, 0, .87);
+  border-radius: 8px;
+}
