--- a/src/lib/exportable/dynamic-form/field-types/date-input-area/date-input-area.component.html
+++ b/src/lib/exportable/dynamic-form/field-types/date-input-area/date-input-area.component.html
@@ -28,7 +28,7 @@
             matTooltip="Add Time"
             (click)="addTime(i)"
             [disabled]="field?.disableTimePicker || input?.disabled"
-            *ngIf="field?.displayTimePicker !== undefined ? field?.displayTimePicker : true">
+            *ngIf="DISPLAY__TIME_PICKER">
       <mat-icon>watch_later</mat-icon>
     </button>
 
