--- a/src/lib/exportable/dynamic-form/field-types/text-input/text-input.component.html
+++ b/src/lib/exportable/dynamic-form/field-types/text-input/text-input.component.html
@@ -1,5 +1,5 @@
 <div [formGroup]="fg" *ngIf="fg && field" class="dynamic-field-wrapper">
-  <mat-form-field [appearance]="appearance" *ngIf="display">
+  <mat-form-field [appearance]="appearance">
     <mat-label *ngIf="appearance">{{field?.fieldLabel}}</mat-label>
 
     <input matInput
