--- a/src/lib/exportable/dynamic-form/field-types/date-input-area/date-input-area.component.css
+++ b/src/lib/exportable/dynamic-form/field-types/date-input-area/date-input-area.component.css
@@ -2,6 +2,10 @@
   display: flex!important;
 }
 
+::ng-deep .mat-form-field-appearance-outline .mat-form-field-infix {
+  padding: 6px 0;
+}
+
 mat-form-field {
   width: 100%;
 }
