--- a/src/lib/exportable/dynamic-form/field-types/decimal-input/decimal-input.component.css
+++ b/src/lib/exportable/dynamic-form/field-types/decimal-input/decimal-input.component.css
@@ -1,3 +1,7 @@
+::ng-deep .mat-form-field-appearance-outline .mat-form-field-infix {
+  padding: 6px 0;
+}
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   display: none;
