--- a/src/lib/exportable/dynamic-form/field-types/text-input/text-input.component.html
+++ b/src/lib/exportable/dynamic-form/field-types/text-input/text-input.component.html
@@ -15,7 +15,7 @@
            *ngIf="field?.onTextInputTextarea"></textarea>
 
     <mat-icon *ngIf="field?.suffix && field?.suffix?.type === 'icon'">{{field?.suffix?.text}}</mat-icon>
-    <span *ngIf="field?.suffix && field?.suffix.type === 'text'">{{field?.suffix?.text}}</span>
+    <span class="hg-dynamic-field-suffix" *ngIf="field?.suffix && field?.suffix.type === 'text'">{{field?.suffix?.text}}</span>
 
     <mat-error>{{errorMessages}}</mat-error>
   </mat-form-field>
