--- a/src/lib/exportable/dynamic-form/field/field.component.html
+++ b/src/lib/exportable/dynamic-form/field/field.component.html
@@ -1,75 +1,75 @@
-<div [formGroup]="fg" *ngIf="fg && _field && display">
+<div [formGroup]="fg" *ngIf="fg && field && display">
 
-  <div [ngSwitch]="_field?.inputType">
+  <div [ngSwitch]="field?.inputType">
 
     <div *ngSwitchCase="'TEXT_INPUT'">
       <app-text-input class="expand"
                       [fg]="fg"
-                      [field]="_field"
+                      [field]="field"
                       [appearance]="appearance"></app-text-input>
     </div>
 
     <div *ngSwitchCase="'INTEGER_INPUT'">
       <app-decimal-input class="expand"
                          [fg]="fg"
-                         [field]="_field"
+                         [field]="field"
                          [appearance]="appearance"></app-decimal-input>
     </div>
 
     <div *ngSwitchCase="'DECIMAL_INPUT'">
       <app-decimal-input class="expand"
                          [fg]="fg"
-                         [field]="_field"
+                         [field]="field"
                          [appearance]="appearance"></app-decimal-input>
     </div>
 
     <div *ngSwitchCase="'DATE_INPUT'">
       <app-date-input class="expand"
                       [fg]="fg"
-                      [field]="_field"
+                      [field]="field"
                       [appearance]="appearance"></app-date-input>
     </div>
 
     <div *ngSwitchCase="'TEXT_INPUT_AREA'">
       <app-date-input-area class="expand"
                            [fg]="fg"
-                           [field]="_field"
+                           [field]="field"
                            [appearance]="appearance"></app-date-input-area>
     </div>
 
     <div *ngSwitchCase="'CHECK_BOX'">
       <app-check-box class="expand"
                       [fg]="fg"
-                      [field]="_field"></app-check-box>
+                      [field]="field"></app-check-box>
     </div>
 
     <div *ngSwitchCase="'COMBO_BOX'">
       <app-combo-box class="expand"
                      [fg]="fg"
-                     [field]="_field"
+                     [field]="field"
                      [fieldDataPool]="fieldDataPool"
                      [appearance]="appearance"
-                     *ngIf="!_field?.multi"></app-combo-box>
+                     *ngIf="!field?.multi"></app-combo-box>
       <app-combo-box-multi class="expand"
                            [fg]="fg"
-                           [field]="_field"
+                           [field]="field"
                            [fieldDataPool]="fieldDataPool"
                            [appearance]="appearance"
-                           *ngIf="_field?.multi"></app-combo-box-multi>
+                           *ngIf="field?.multi"></app-combo-box-multi>
     </div>
 
     <div *ngSwitchCase="'COMBO_BOX_AREA'">
       <app-combo-box-multi class="expand"
                            [fg]="fg"
-                           [field]="_field"
+                           [field]="field"
                            [fieldDataPool]="fieldDataPool"
                            [appearance]="appearance"></app-combo-box-multi>
     </div>
 
     <div *ngSwitchCase="'INPUT_TABLE'">
       <app-form-array [fg]="fg"
-                      [field]="_field"
-                      [fieldArray]="fg.get(_field?.fieldName)"
+                      [field]="field"
+                      [fieldArray]="fg.get(field?.fieldName)"
                       [appearance]="appearance"></app-form-array>
     </div>
   </div>
